# home-secure-device

./: .gitignore  connect.py  pyproject.toml
hub_firmware/: device_hub.py
hub_firmware/glazia_hub/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfigq
hub_firmware/glazia_hub/main/: CMakeLists.txt  api_client.c  api_client.h  aqi_sensor.c  aqi_sensor.h  ble.c  ble.h  button.c  button.h  camera_media_ws.c  camera_media_ws.h  camera_stream.c  camera_stream.h  display.c  display.h  door_lock.c  door_lock.h  espnow.c  espnow.h  fingerprint.c  fingerprint.h  font.h  hub_control_ws.c  hub_control_ws.h  hub_sensor.c  idf_component.yml  main.c  nvs_storage.c  nvs_storage.h  state.h  websocket.c  websocket.h  wifi.c  wifi.h
hub_firmware/glazia_hub/main/ui/: images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui_image_gz_logo.c  ui_image_temp_img.c
hub_firmware/glazia_hub/main/ui/design/: Glazia Ocean Night.html
hub_firmware/sensor_mac_extractor/: CMakeLists.txt  gen_qr.py
hub_firmware/sensor_mac_extractor/main/: CMakeLists.txt  mac_extractor.c
hub_firmware/tft_c6/: sdkconfig  sdkconfig.defaults
sensor_firmware/glazia_sensor/: sdkconfig
server/: auth_helper.py  generate_qr.py  main.py  models.py  requirements.txt  store.py
server/routes/: auth.py  device_hub.py  homes.py  notifications.py  sensors.py
sesnor_test/: tft_display_setup.txt
sesnor_test/reed_test/: CMakeLists.txt
sesnor_test/s3_display_ctrl/: CMakeLists.txt
sesnor_test/tft_test/: CMakeLists.txt
sesnor_test/vib_test/: CMakeLists.txt
(+17 files in other folders)
